--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -66,9 +66,9 @@ li.L8 { list-style-type: decimal !important }
         <div class="progress" id="load">
       <div class="indeterminate"></div>
   </div>
-            <p class="hide-on-med-and-down left">
-              <img src="{% static '/img/mythical-large.png' %}" height="8%" width="8%" style="padding-left: 30px" />
-            </p>
+            <div class="hide-on-med-and-down left">
+              <img src="{% static '/img/mythical-large.png' %}" height="50px" width="80px" style="padding-left: 30px" />
+            </div>
             <a href="#" data-activates="slide-out" class="button-collapse"><i class="large material-icons">menu</i></a>
             <a class="brand-logo hide-on-large-only right">
                <img src="{% static '/img/mythical-large.png' %}" height="50px" width="40px" style="padding-top:8px;"/>
